src/third_party/blink/web_tests/virtual/web-components-v0-disabled/fast/dom/shadow/cyclic-append-crash-expected.txt
CONSOLE ERROR: line 13: Uncaught TypeError: f2.createShadowRoot is not a function
If this does not crash, the test passed.
